# Pokemon-Opus

./: .env.example  .gitignore  README.md  memories.md  pyproject.toml
pokemon_agent/: README.upstream.md  __init__.py  cli.py  emulator.py  pathfinding.py  runner.py  server.py
pokemon_agent/dashboard/: __init__.py  history.py  mount.py
pokemon_agent/dashboard/static/: app.js  index.html  style.css
pokemon_agent/memory/: firered.py  reader.py  red.py  red_tile_data.py
pokemon_agent/state/: builder.py
pokemon_opus/: config.py  game_client.py  main.py  orchestrator.py  state.py
pokemon_opus/agents/: battle.py  explore.py  intro.py  menu.py  strategist.py
pokemon_opus/context/: builder.py
pokemon_opus/data/: map_data.py  type_chart.py
pokemon_opus/llm/: client.py
pokemon_opus/map/: graph.py  grid.py
pokemon_opus/memory/: manager.py
pokemon_opus/objectives/: manager.py
pokemon_opus/streaming/: server.py
tests/: conftest.py  test_deltas.py  test_explore_pathfinder.py  test_game_client.py  test_grid.py  test_intro_agent.py  test_llm.py  test_map.py  test_pathfinder_scenarios.py  test_state_sync.py  test_type_chart.py
viewer/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
viewer/src/: App.tsx  index.css
viewer/src/components/: BadgeTimeline.tsx  GameScreen.tsx  InventoryPanel.tsx  Layout.tsx  MapView.tsx  MilestonesPanel.tsx  ObjectivesPanel.tsx  ReasoningPanel.tsx  StatsBar.tsx  TeamPanel.tsx
viewer/src/hooks/: useWebSocket.ts
viewer/src/lib/: types.ts
